--- a/combat2D.vcxproj
+++ b/combat2D.vcxproj
@@ -67,6 +67,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="gettimeofday.cpp" />
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="level.cpp" />
@@ -77,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="gettimeofday.h" />
     <ClInclude Include="gui.h" />
     <ClInclude Include="level.h" />
