--- a/combat2D.vcxproj
+++ b/combat2D.vcxproj
@@ -19,14 +19,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -63,16 +63,22 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glu32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glu32.lib;glew32s.lib;glfw3.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="game.cpp" />
     <ClCompile Include="gettimeofday.cpp" />
     <ClCompile Include="gui.cpp" />
+    <ClCompile Include="gui_button.cpp" />
+    <ClCompile Include="gui_element.cpp" />
+    <ClCompile Include="gui_text.cpp" />
+    <ClCompile Include="gui_window.cpp" />
+    <ClCompile Include="inventory.cpp" />
     <ClCompile Include="level.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="render.cpp" />
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
@@ -81,8 +87,10 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="gettimeofday.h" />
     <ClInclude Include="gui.h" />
+    <ClInclude Include="inventory.h" />
     <ClInclude Include="level.h" />
     <ClInclude Include="math.h" />
+    <ClInclude Include="object.h" />
     <ClInclude Include="render.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.h" />
