--- a/combat2D.vcxproj.filters
+++ b/combat2D.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="ui_funcs.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="gui_multilinetext.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="level.h">
